# Algebra

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Lib/: Algebra.h  algebra.h  algebra.tpp
Lib/Equation/: Equation.h  Equation.tpp
Lib/Math/: Math.h  Math.tpp
Lib/MathFiles/: MathFiles.h  MathFiles.tpp
Lib/Matrix/: Matrix.h  Matrix.tpp
Lib/SLAE/: SLAE.h  SLAE.tpp
Lib/Vector/: Vector.h  Vector.tpp
Lib/Vectors/: Vector.h
Lib/maths/: maths.h  maths.tpp
Lib/matrixes/: matrixes.h  matrixes.tpp
Lib/vectors/: vectors.h  vectors.tpp
TESTS/: test_Equation.cpp  test_Math.cpp  test_Matrix.cpp  test_SLAE.cpp  test_Vector.cpp
